--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -26,29 +26,40 @@
 }
 
 @article{finufft_1,
-	title = {A parallel non-uniform fast {Fourier} transform library based on an "exponential of semicircle" kernel},
-	url = {http://arxiv.org/abs/1808.06736},
-	urldate = {2021-12-18},
-	journal = {arXiv:1808.06736 [cs, math]},
-	author = {Barnett, Alex H. and Magland, Jeremy F. and Klinteberg, Ludvig af},
-	month = apr,
+	title = {A {Parallel} {Nonuniform} {Fast} {Fourier} {Transform} {Library} {Based} on an “{Exponential} of {Semicircle}" {Kernel}},
+	volume = {41},
+	issn = {1064-8275, 1095-7197},
+	url = {https://epubs.siam.org/doi/10.1137/18M120885X},
+	doi = {10.1137/18M120885X},
+	language = {en},
+	number = {5},
+	urldate = {2021-12-19},
+	journal = {SIAM Journal on Scientific Computing},
+	author = {Barnett, Alexander H. and Magland, Jeremy and af Klinteberg, Ludvig},
+	month = jan,
 	year = {2019},
-	note = {arXiv: 1808.06736},
-	keywords = {⛔ No DOI found, 65T50, 65T40, 65Y05, 68N01, Computer Science - Mathematical Software, Mathematics - Numerical Analysis},
-	annote = {Comment: 25 pages, 9 figures},
+	pages = {C479--C504},
+	file = {BarnettA_et_al_2019_A_Parallel_Nonuniform_Fast_Fourier_Transform_Library_Based_on_an_“Exponential.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\BarnettA_et_al_2019_A_Parallel_Nonuniform_Fast_Fourier_Transform_Library_Based_on_an_“Exponential.pdf:application/pdf},
 }
 
+
 @article{finufft_2,
-	title = {Aliasing error of the exp\$({\textbackslash}beta {\textbackslash}sqrt\{1-z{\textasciicircum}2\})\$ kernel in the nonuniform fast {Fourier} transform},
-	url = {http://arxiv.org/abs/2001.09405},
-	journal = {arXiv:2001.09405 [cs, math]},
-	author = {Barnett, A. H.},
-	month = oct,
-	year = {2020},
-	note = {arXiv: 2001.09405},
-	keywords = {⛔ No DOI found, 65T50, 42A38, Mathematics - Numerical Analysis},
-	annote = {Comment: 18 pages, 2 figures; in press at Appl. Comput. Harmon. Anal.; updated Rmk 4 in light of revised Potts-Tasche preprint},
+	title = {Aliasing error of the $\exp(\beta\sqrt{1-z^2})$ kernel in the nonuniform fast {Fourier} transform},
+	volume = {51},
+	issn = {1063-5203},
+	url = {https://www.sciencedirect.com/science/article/pii/S1063520320300725},
+	doi = {10.1016/j.acha.2020.10.002},
+	language = {en},
+	urldate = {2021-12-19},
+	journal = {Applied and Computational Harmonic Analysis},
+	author = {Barnett, Alex H.},
+	month = mar,
+	year = {2021},
+	keywords = {Aliasing error, Interpolation, Kaiser–Bessel window, Nonuniform fast Fourier transform, Prolate spheroidal wavefunction, Steepest descent, Window function},
+	pages = {1--16},
+	file = {ScienceDirect Snapshot:C\:\\Ryan\\Paper_Zotero\\Zotero_Data\\storage\\YZLLJ4G9\\S1063520320300725.html:text/html},
 }
+
 
 
 @article{staniforth1991,
@@ -126,7 +137,6 @@ Section: Monthly Weather Review},
 	journal = {Quarterly Journal of the Royal Meteorological Society},
 	author = {Temperton, Clive and Staniforth, Andrew},
 	year = {1987},
-	note = {\_eprint: https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49711347714},
 	pages = {1025--1039},
 	file = {Snapshot:C\:\\Ryan\\Paper_Zotero\\Zotero_Data\\storage\\XZNTHWP7\\qj.html:text/html;TempertonC_StaniforthA_1987_An_Efficient_Two-Time-Level_Semi-Lagrangian_Semi-Implicit_Integration_Scheme.pdf:C\:\\Ryan\\Paper_Zotero\\Class\\CompPDEs\\TempertonC_StaniforthA_1987_An_Efficient_Two-Time-Level_Semi-Lagrangian_Semi-Implicit_Integration_Scheme.pdf:application/pdf},
 }
